--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": " https://mrinank1301.github.io/frontend",
+  "homepage": " https://mrinank1301.github.io/frontend/",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
